# DH2323

./: skeleton.cpp
lab1/: CMakeLists.txt  skeleton.cpp
lab1/SDL_1.2_x86_vs2015/: SDL.lib  SDLmain.lib
lab2/: CMakeLists.txt  skeleton.cpp
lab3/: CMakeLists.txt  skeleton.cpp
